apps/home-assistant/home-assistant-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: home-assistant
spec:
  serviceName: home-assistant
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: localhost:32000/home-assistant
          ports:
            - containerPort: 8123
          volumeMounts:
            - name: home-assistant
              subPath: config
              mountPath: /config
      volumes:
        - name: home-assistant
          persistentVolumeClaim:
            claimName: home-assistant
        - name: home-assistant-config
          configMap:
            name: home-assistant-config
