apps/home-assistant/home-assistant-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  type: ClusterIP
  selector:
    app: home-assistant
  ports:
    - name: home-assistant
      port: 8123
      targetPort: 8123
